--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.2",
     "globals": "^15.9.0",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.10",
     "typescript-eslint": "^8.4.0"
   }
 }
