--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.2",
+    "file-loader": "^6.2.0",
     "globals": "^15.9.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
