--- a/apps/cdk/package.json
+++ b/apps/cdk/package.json
@@ -12,8 +12,7 @@
   "devDependencies": {
     "@types/node": "20.14.9",
     "aws-cdk": "2.157.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.5.3"
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.157.0",
